# svelte-fastapi-exe

./: .env  .env.example  .gitignore  App.spec  CLAUDE.md  MyAgent.spec  README.md  Updater.spec  claude_code_mock_provider_prompt.md  pyproject.toml
.claude/: launch.json
.claude/rules/: agent_extension.md  agent_runtime.md  app_lifecycle.md  backend_architecture.md  charts_pipeline.md  code_conventions.md  commands.md  environment.md  extensions_architecture.md  extensions_evaluator.md  frontend_architecture.md  frontend_components.md  frontend_state.md  harness_resilience.md  settings_architecture.md  update_architecture.md
AGENTS/: analyst_agent.md  coding_agent.md  report_agent.md  research_agent.md  writer_agent.md
PROMPTS/: orchestrator.md  safety.md  tools_guide.md
SKILLS/: code_review.md  data_analysis.md  data_summary.md  rank_review.md  report.md  report_writer.md  time.md  time_check.md
backend/: __init__.py  _version.py  browser.py  config.py  main.py  updater.py
backend/agent/: __init__.py  config.py  guard.py  harness.py  models.py
backend/api/: __init__.py  artifact.py  chart.py  chat.py  deps.py  extensions.py  presence.py  settings.py  skills.py  update.py
backend/chat/: harness.py  models.py
backend/core/: __init__.py  browser.py  config.py  content_sync.py  extensions_loader.py  github_api.py  log_collector.py  result_store.py  server_socket.py  tls.py  updater.py
backend/routers/: api.py
backend/scripts/: __init__.py  stats.py
backend/settings/: __init__.py  config.py  masking.py  models.py  settings.json  store.py
backend/tests/: conftest.py  (+37 more)
docs/: README.md  agents.md  builtin-tools.md  charts.md  extensions.md  library-runtime.md  mock-scenarios.md  skills.md
frontend/: index.html  package.json  vite.config.js
packaging/: App.spec  Updater.spec  build-dev.ps1  release-dryrun.ps1  release.ps1  upload.py
scripts/: release-dryrun.ps1  release.ps1
updater/: updater.py
(+169 files in other folders)
